# gnsspp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
bindings/: bind_cfg.cpp  bind_cfg.hpp  bind_core.cpp  bind_core.hpp  bind_nmea.cpp  bind_nmea.hpp  bind_rtcm3.cpp  bind_rtcm3.hpp  bind_ubx.cpp  bind_ubx.hpp  bindings.cpp  helpers.hpp
cmake/: gnssppConfig.cmake.in
examples/: decode_log.py  simple_reader.cpp  simple_reader.py
include/gnsspp/: error.hpp  frame.hpp  frame_reader.hpp  gnsspp.hpp  iparser.hpp  message.hpp  parser.hpp  port.hpp  posix_serial_port.hpp  posix_tcp_port.hpp  serial_port.hpp
include/gnsspp/nmea/: gsv.hpp  nmea_parser.hpp
include/gnsspp/parsers/: iparser.hpp  nmea_parser.hpp  rtcm3_parser.hpp  ubx_parser.hpp
include/gnsspp/parsers/nmea/: gga.hpp  gsa.hpp  rmc.hpp  vtg.hpp
include/gnsspp/parsers/rtcm3/: msg1006.hpp
include/gnsspp/parsers/ubx/: nav_pvt.hpp  nav_relposned.hpp  nav_svin.hpp  rxm_rtcm.hpp
include/gnsspp/ports/: port.hpp  serial_port.hpp
include/gnsspp/rtcm3/: msg1005.hpp  msg1006.hpp  msg1230.hpp  msm4.hpp  rtcm3_framer.hpp  rtcm3_parser.hpp
include/gnsspp/ubx/: ack.hpp  cfg_rst.hpp  cfg_valget.hpp  cfg_valset.hpp  nav_hpposllh.hpp  nav_sat.hpp  nav_status.hpp  ubx_parser.hpp  ubx_poll.hpp
python/gnsspp/: __init__.py
src/: decode.cpp  frame_reader.cpp  posix_serial_port.cpp  posix_tcp_port.cpp  serial_port.cpp
src/nmea/: gga.cpp  gsa.cpp  gsv.cpp  nmea_parser.cpp  nmea_util.hpp  rmc.cpp  vtg.cpp
src/parsers/: nmea_parser.cpp  rtcm3_parser.cpp  ubx_parser.cpp
src/parsers/nmea/: gga.cpp  gsa.cpp  gsv.cpp  rmc.cpp  vtg.cpp
src/parsers/rtcm3/: bit_reader.cpp  bit_reader.hpp  msg1005.cpp  msg1006.cpp  msg1230.cpp  msm4.cpp
src/parsers/ubx/: nav_parser.cpp  nav_parser.hpp  nav_pvt.cpp  nav_relposned.cpp  nav_sat.cpp  nav_svin.cpp  rxm_rtcm.cpp
src/rtcm3/: bit_reader.hpp  msg1005.cpp  msg1006.cpp  msg1230.cpp  msm4.cpp  rtcm3_framer.cpp  rtcm3_parser.cpp
src/ubx/: ack.cpp  cfg_rst.cpp  cfg_valget.cpp  cfg_valset.cpp  nav_hpposllh.cpp  nav_parser.cpp  nav_pvt.cpp  nav_relposned.cpp  nav_sat.cpp  nav_status.cpp  nav_svin.cpp  rxm_parser.cpp  rxm_parser.hpp  rxm_rtcm.cpp  ubx_frame.hpp  ubx_parser.cpp  ubx_poll.cpp  ubx_util.hpp
test/: mock_port.hpp  test_frame_reader.cpp
test/nmea/: test_gga.cpp  test_gsa.cpp  test_gsv.cpp  test_rmc.cpp  test_vtg.cpp
test/rtcm3/: bit_writer.hpp  test_msg1005.cpp  test_msg1006.cpp  test_msg1230.cpp  test_msm4.cpp  test_rtcm3_parser.cpp
test/ubx/: test_ack.cpp  test_cfg_valget.cpp  test_cfg_valset.cpp  test_nav_hpposllh.cpp  test_nav_pvt.cpp  test_nav_relposned.cpp  test_nav_sat.cpp  test_nav_status.cpp  test_nav_svin.cpp  test_rxm_rtcm.cpp
