[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "gnsspp-py"
version = "0.1.0"
description = "Python bindings for the gnsspp GNSS protocol library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Viktor Sobetskyi" }]

[tool.scikit-build]
cmake.build-type = "Release"
# Python package lives in python/gnsspp/
wheel.packages = ["python/gnsspp"]

[tool.scikit-build.cmake.define]
GNSSPP_BUILD_TESTS    = "OFF"
GNSSPP_BUILD_EXAMPLES = "OFF"
